--- a/PAM/Views/System/AddSystem.cshtml
+++ b/PAM/Views/System/AddSystem.cshtml
@@ -1,22 +1,12 @@
 ﻿@model PAM.Models.System
 @{
-  ViewData["Title"] = "Edit System";
-}
-@section Scripts{
-  <script>
-    function confirmRemoval() {
-      var msg = "Are you sure you want to remove this system?";
-      if (confirm(msg))
-        window.location.href = "/System/RemoveSystem/@Model.SystemId";
-    }
-  </script>
+  ViewData["Title"] = "Add System";
 }
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a asp-action="Systems">Systems</a></li>
-    <li class="breadcrumb-item"><a asp-action="ViewSystem" asp-route-id="@Model.SystemId">@Model.Name</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Edit</li>
+    <li class="breadcrumb-item active" aria-current="page">Add System</li>
   </ol>
 </nav>
 
@@ -38,11 +28,8 @@
     </div>
   </div>
   <div class="form-row">
-    <div class="col-6">
-      <a href="javascript:confirmRemoval()" class="btn btn-danger">Remove System</a>
-    </div>
-    <div class="col-6 text-right">
-      <button type="submit" class="btn btn-primary">Save</button>
+    <div class="col-12 text-right">
+      <button type="submit" class="btn btn-primary">Add</button>
     </div>
   </div>
 </form>
