--- a/PAM/Views/EditAddAccess/AddSystems.cshtml
+++ b/PAM/Views/EditAddAccess/AddSystems.cshtml
@@ -1,61 +1,35 @@
 ﻿@model Request
 @{
-  ViewData["Title"] = "Add Unit Selection";
-  ViewData["id"] = Model.RequestId;
+     ViewData["Title"] = "Add Systems Selection";
+     ViewData["id"] = Model.RequestId;
+     var systems = (List<PAM.Models.System>)ViewData["systems"];
 }
 @section StyleSheets{
   <link rel="stylesheet" href="~/css/progressbar.css" />
+  <link rel="stylesheet" href="~/lib/bootstrap-table/bootstrap-table.min.css">
 }
 @section Scripts {
   <script src="~/lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
+  <script src="~/lib/bootstrap-table/bootstrap-table.min.js"></script>
   <script>
   $(function(){
-    var page ='@ViewData["Title"]';
-    $("li[data-title='" + page + "']").addClass("active");
-    $("#tree").treeview({
-      data: @Html.Raw(@ViewData["tree"]),
-      levels: 1,
-      expandIcon: "fa fa-caret-down",
-      collapseIcon: "fa fa-caret-up",
-      onNodeSelected: function (event, node) {
-        if (node.type == "Bureau") {
-          $("#unitId").val("");
-          $("#systems").empty();
-          $("#next").prop("disabled", true);
-          $("#saveDraft").prop("disabled", true);
-          return;
-        }
-        $("#unitId").val(node.id);
+    $(function() {
+      var defaultSystems = @Model.RequestedFor.UnitId 
+        $("#unitId").val(defaultSystems);
         $("#next").prop("disabled", false);
         $("#saveDraft").prop("disabled", false);
         $.ajax({
-          url: "/api/portfolio/" + node.id,
+          url: "/api/portfolio/" + defaultSystems,
           success: function (data) {
             $("#systems").empty();
             data.forEach(function (system) {
-              $("#systems").append("<tr><td>" + system.systemId + "</td><td>"
-                + system.name + "</td><td>"
-                + (system.description ? system.description : '') + "</td></tr>");
+              $("#systems").append("<tr><td>"
+                + system.systemId + "</td><td>"
+                + system.name + "</td></tr>");
             });
           }
         })
-      }
-    });
-    if ($("#unitId").val()) {
-      var nodeId = 1;
-      var node = $("#tree").treeview("getNode", nodeId);
-      while (node) {
-        if (node.type == 'Unit' && node.id == $("#unitId").val()) break;
-        node = $("#tree").treeview("getNode", ++nodeId);
-      }
-      if (node) {
-        console.log(node);
-        $("#tree").treeview("selectNode", node);
-        $('#tree').treeview('revealNode', [nodeId, { silent: true }]);
-        $("#next").prop("disabled", false);
-        $("#saveDraft").prop("disabled", false);
-      }
-    }
+    })
     $("#saveDraft").click(function () {
       var form = $(this).parents("form:first");
       form.append("<input type='hidden' name='saveDraft' value='true'>");
@@ -65,20 +39,59 @@
   </script>
 }
 
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a asp-controller="Request" asp-action="MyRequests">My Requests</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Request #@ViewData["id"]</li>
+  </ol>
+</nav>
+
 <form asp-action="AddSystems" method="post">
-  <div class="row">
-    <div class="col-12 col-md-6 mb-3">
-      <p>System Portfolio</p>
-      <table class="table sticky-top">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-          </tr>
-        </thead>
-        <tbody id="systems"></tbody>
-      </table>
+  <div class="mb-3">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="card">
+          <h4 class="card-header">Default Systems</h4>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Name</th>
+                </tr>
+              </thead>
+              <tbody id="systems"></tbody>
+            </table>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <p class="float-left mt-2">Please select the system(s) to add:</p>
+        <table data-toggle="table" data-pagination="true" data-page-size="25" data-search="true" data-search-align="right">
+          <thead>
+            <tr>
+              <th></th>
+              <th class="d-md-table-cell" data-sortable="true" scope="col">Id</th>
+              <th class="d-md-table-cell" data-sortable="true" scope="col">Name</th>
+              <th class="d-md-table-cell" scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          @foreach (var system in systems)
+          {
+            <tr>
+              <td class="d-none d-md-table-cell">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="systemAdd" />
+                  <label class="custom-control-label" for="systemAdd"></label>
+                </div>
+              </td>
+              <td class="d-none d-md-table-cell">@system.SystemId</td>
+              <td class="d-none d-md-table-cell">@system.Name</td>
+              <td class="d-none d-md-table-cell">@system.Description</td>
+            </tr>
+          }
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
   <div class="form-row">
@@ -90,5 +103,4 @@
       <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
     </div>
   </div>
-  <input id="unitId" name="unitId" type="hidden" value="@Model.RequestedFor.UnitId" />
 </form>
