--- a/PAM/Views/EditAddAccess/UnitSelection.cshtml
+++ b/PAM/Views/EditAddAccess/UnitSelection.cshtml
@@ -2,6 +2,7 @@
 @{
   ViewData["Title"] = "Add Unit Selection";
   ViewData["id"] = Model.RequestId;
+  
 }
 @section StyleSheets{
   <link rel="stylesheet" href="~/css/progressbar.css" />
@@ -33,7 +34,8 @@
           success: function (data) {
             $("#systems").empty();
             data.forEach(function (system) {
-              $("#systems").append("<tr><td>" + system.systemId + "</td><td>"
+              $("#systems").append("<tr><td>"
+                + system.systemId + "</td><td>"
                 + system.name + "</td><td>"
                 + (system.description ? system.description : '') + "</td></tr>");
             });
@@ -74,9 +76,9 @@
 
 <partial name="../Shared/_ProgressBar1.cshtml" />
 
-<form asp-action="SelectUnit" method="post">
+<form asp-action="UnitSelection" method="post">
   <div class="row">
-    <div class="col-12 col-md-6 offset-md-3 mb-3">
+    <div class="col-12 mb-3">
       <p>Please select your unit/job function:</p>
       <div id="tree"></div>
     </div>
@@ -101,7 +103,7 @@
       <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
+      <a asp-action="UnitSelection" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
     </div>
   </div>
