--- a/PAM/Views/EditAddAccess/AddSystems.cshtml
+++ b/PAM/Views/EditAddAccess/AddSystems.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Request
 @{
-  ViewData["Title"] = "Add Systems Selection";
+  ViewData["Title"] = "Additional Systems";
   ViewData["id"] = Model.RequestId;
   var systemsList = (List<PAM.Models.System>)ViewData["systems"];
 }
@@ -110,7 +110,7 @@
       <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
+      <a asp-controller="EditAddAccess" asp-action="UnitSelection" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
     </div>
   </div>
