--- a/PAM/Views/EditAddAccess/UnitSelection.cshtml
+++ b/PAM/Views/EditAddAccess/UnitSelection.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Request
 @{
-  ViewData["Title"] = "Add Unit Selection";
+  ViewData["Title"] = "Unit Selection";
   ViewData["id"] = Model.RequestId;
   
 }
@@ -82,28 +82,13 @@
       <p>Please select your unit/job function:</p>
       <div id="tree"></div>
     </div>
-    <!--
-    <div class="col-12 col-md-6 mb-3">
-      <p>System Portfolio</p>
-      <table class="table sticky-top">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-          </tr>
-        </thead>
-        <tbody id="systems"></tbody>
-      </table>
-    </div>
-    -->
   </div>
   <div class="form-row">
     <div class="col-4">
       <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="UnitSelection" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
+      <a asp-controller="Request" asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
     </div>
   </div>
