--- a/PAM/Views/Request/ViewRequest.cshtml
+++ b/PAM/Views/Request/ViewRequest.cshtml
@@ -6,7 +6,8 @@
 }
 
 <div class="row mb-3">
-  <div class="col-12">'
+  <div class="col-12">
+    '
     <a asp-controller="Request" asp-action="MyRequests" class="btn btn-primary float-right">Return</a>
   </div>
 </div>
@@ -25,12 +26,12 @@
     </div>
     @if (!Model.IsSelfRequest)
     {
-    <div class="row">
-      <div class="form-group">
-        <label>Prepared By</label>
-        <span class="form-control">@Model.RequestedBy.Name</span>
+      <div class="row">
+        <div class="form-group">
+          <label>Prepared By</label>
+          <span class="form-control">@Model.RequestedBy.Name</span>
+        </div>
       </div>
-    </div>
     }
   </div>
 </div>
@@ -117,41 +118,115 @@
   <div class="card-header">
     Systems Requested
   </div>
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Bureau</label>
-        <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+  @if (Model.RequestTypeId == 4)
+  {
+    <div class="card-body">
+      <div class="row">
+        <div class="form-group col-md-6">
+          <label>Bureau</label>
+          <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+        </div>
+        <div class="form-group col-md-6">
+          <label>Unit / Job Function</label>
+          <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+        </div>
       </div>
-      <div class="form-group col-md-6">
-        <label>Unit / Job Function</label>
-        <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+      <div class="row">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Id</th>
+              <th scope="col">Name</th>
+              <th scope="col" class="d-none d-md-table-cell">Description</th>
+              <th scope="col" class="nowrap">In Portfolio</th>
+            </tr>
+          </thead>
+          <tbody>
+            @foreach (var requestedSystem in Model.Systems)
+            {
+              <tr>
+                <td>@requestedSystem.System.SystemId</td>
+                <td>@requestedSystem.System.Name</td>
+                <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
+                <td>@requestedSystem.InPortfolio</td>
+              </tr>
+            }
+          </tbody>
+        </table>
+      </div>
+    </div>
+  }
+  @if (Model.RequestTypeId == 11)
+  {
+    <div class="card-body">
+      <div class="row">
+        <div class="form-group col-md-6">
+          <label>Bureau</label>
+          <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+        </div>
+        <div class="form-group col-md-6">
+          <label>Unit / Job Function</label>
+          <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+        </div>
       </div>
     </div>
     <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col" class="d-none d-md-table-cell">Description</th>
-            <th scope="col" class="nowrap">In Portfolio</th>
-          </tr>
-        </thead>
-        <tbody>
-          @foreach (var requestedSystem in Model.Systems)
-          {
-          <tr>
-            <td>@requestedSystem.System.SystemId</td>
-            <td>@requestedSystem.System.Name</td>
-            <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
-            <td>@requestedSystem.InPortfolio</td>
-          </tr>
-          }
-        </tbody>
-      </table>
+      <div class="col-md-6">
+        <div class="card">
+          <h5 class="card-header text-center">Default Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">In Portfolio</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in Model.Systems)
+              {
+                @if (requestedSystem.InPortfolio)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                    <td>@requestedSystem.InPortfolio</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card">
+          <h5 class="card-header text-center">Additional Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">In Portfolio</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in Model.Systems)
+              {
+                @if (!requestedSystem.InPortfolio)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                    <td>@requestedSystem.InPortfolio</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-  </div>
+  }
 </div>
 
 <div class="card">
@@ -163,33 +238,33 @@
       <div class="col-md-4">
         @if (Model.IsContractor)
         {
-        <i class="far fa-check-square"></i>
+          <i class="far fa-check-square"></i>
         }
         else
         {
-        <i class="far fa-square"></i>
+          <i class="far fa-square"></i>
         }
         Contractor
       </div>
       <div class="col-md-4">
         @if (Model.IsHighProfileAccess)
         {
-        <i class="far fa-check-square"></i>
+          <i class="far fa-check-square"></i>
         }
         else
         {
-        <i class="far fa-square"></i>
+          <i class="far fa-square"></i>
         }
         High Profile
       </div>
       <div class="col-md-4">
         @if (Model.IsGlobalAccess)
         {
-        <i class="far fa-check-square"></i>
+          <i class="far fa-check-square"></i>
         }
         else
         {
-        <i class="far fa-square"></i>
+          <i class="far fa-square"></i>
         }
         Global Access
       </div>
@@ -218,12 +293,12 @@
   <div class="card-body">
     @foreach (var review in Model.Reviews)
     {
-    <div class="row">
-      <div class="form-group col">
-        <label>@review.ReviewerTitle</label>
-        <span class="form-control">@review.Reviewer.Name</span>
+      <div class="row">
+        <div class="form-group col">
+          <label>@review.ReviewerTitle</label>
+          <span class="form-control">@review.Reviewer.Name</span>
+        </div>
       </div>
-    </div>
     }
   </div>
 </div>
